[package]
name = "snmp-mib"
description = "An implementation of the SNMP Management Information Base"
version = "0.1.0"
edition = "2018"
authors = ["Kyle Schaffrick <kyle@raidi.us>"]
keywords = ["snmp", "mib", "smi"]
repository = "https://github.com/edarc/snmp-smi"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
]

[dependencies]
lazy_static = "1.4"
nom = "7.0"
num = "0.4"
sequence_trie = "0.3"
smallvec = "1.6"
thiserror = "1.0"

[dev-dependencies]
proptest = "0.9"
